--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,6 +12,6 @@
 
 <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white">
   <div class="container text-center">
-    <small>Copyright &copy; <%= link_to "Saraman Karamta", "http://localhost:3000/", class: "text-white" %></small>
+    <small>Copyright &copy; <%= link_to "Saraman Karamta", "https://alpha-blog-saraman.herokuapp.com/", class: "text-white" %></small>
   </div>
 </footer>
