Article design done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,12 @@
   
         
   <%= render 'layouts/navigation' %>
+  <div id="page-content">
   <%= render 'layouts/messages' %>
-
   <%= yield %>
+  </div>
   
-
+<%= render 'layouts/footer' %>
   
   </body>
 </html>
