--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,24 +1,28 @@
-<% if @article.errors.any? %>
-    <h2>Error Occured</h2>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li>  <%= msg %></li>
-        <% end %>
-<% end %>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-10">
+        <%= render 'shared/errors' %>
+            <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true)  do |f| %>
+            <div class="mb-3 row"> 
+                <%= f.label :title, class: "col-2 col-ofrm-label text-light" %><br/>
+                <div class="col-10">
+                    <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of Article" %>
+                </div>
+            </div>
+            <div class="mb-3 row"> 
+                <%= f.label :description, class: "col-2 col-form-label text-light" %><br/>
+                <div class="col-10">
+                    <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description of Article" %>
+                </div>
 
-<%= form_with(model: @article, local: true)  do |f| %>
-
-    <p> 
-        <%= f.label :title %><br/>
-         <%= f.text_field :title %>
-    </p>
-
-    <p>
-        <%= f.label :description %><br/>
-        <%= f.text_area :description %>
-
-    </p>
-
-    <p>
-        <%= f.submit%>
-    </p>
-    <% end%>
+            </div>
+            <div class="mb-3 d-flex justify-content-center"> 
+                <%= f.submit class: "btn btn-outline-light lg"%>
+            </div>
+            <% end%>
+        </div>
+        <div class="mb-3 d-flex justify-content-center">
+        <%= link_to '[ Cancel Return to articles listing ]', articles_path, class: "text-info" %>
+        </div>
+    </div>
+</div>
