--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Edit article</h1>
 
-<%= render 'form' %>
+    <h1 class="text-center mt-4"> Edit new Article</h1>
 
-<%= link_to 'Return to artis listying', articles_path %>
+    <%= render 'form' %>
