--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,28 +1,28 @@
-<div id="page-content">
-    <h1 class="text-center mt-4"> Listing All Articles</h1>
+    <h1 class="text-center mt-4">Listing all articles</h1>
+    <div class= "d-flex justify-content-center">
+    <%= link_to 'Create new', new_article_path, class: "btn btn-success" %>
+    </div>
     <div class="container">
         <% @articles.each do |article| %>
             <div class="row justify-content-md-center">
                 <div class="col-8 mt-4">
                     <div class="card text-center shadow mb-5 bg-white rounded">
-                        <div class="card-header">
-                            <div class="fst-italic">
-                                By Saraman Karamta
-                            </div>
+                        <div class="card-header fst-italic">
+                            by Akshay Savaliya
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
-                            <p class="card-text"><%= truncate(article.description, length:100) %></p>
-                            <a href="#" > <%= link_to "View", article_path(article), class: "btn btn-outline-primary" %></a>
-                            <a href="#" ><%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-success" %></a>
-                            <a href="#" ><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %></a>
+                            <h5 class="card-title"><%= link_to article.title ,article_path(article), class: "text-success" %></h5>
+                            <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+                            <a href="#" ><%= link_to "View", article_path(article) ,class: "btn btn-outline-success" %></a>
+                            <a href="#" ><%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info"%></a>
+                            <a href="#" ><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure"} ,class: "btn btn-outline-danger" %></a>
                         </div>
                         <div class="card-footer text-muted">
-                            <small>Created <%= time_ago_in_words(article.created_at) %> ago, Edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+                            <small>Created <%= time_ago_in_words(article.created_at) %> ago,
+                            edited <%= time_ago_in_words(article.updated_at) %> ago</small>
                         </div>
                     </div>
                 </div>
-            </end>
+            </div>
         <% end %>
     </div>
-</div>
