--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,3 @@
-<h1>Create new article</h1>
-<%= render 'form' %>
+    <h1 class="text-center mt-4"> Create new Article</h1>
+    <%= render 'form' %>    
     
-<%= link_to 'Return to articles listing', articles_path %>
