--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -25,7 +25,7 @@
 }
     
 #bg-light-background {
-    background-image: asset-url('jumbo-copy.jpg');
+    background-image: url('~jumbo-copy.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
