--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
             <div class="card text-center shadow mb-5 bg-white rounded">
                 <div class="card-header">
                     <div class="fst-italic">
-                        By Saraman Karamta
+                        By <%= @article.user.username if @article.user %>
                     </div>
                 </div>
                 <div class="card-body">
