--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,7 +24,7 @@
 
             </div>
             <div class="mb-3 d-flex justify-content-center"> 
-                <%= f.submit "Sign up", class: "btn btn-outline-light lg"%>
+                <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-outline-light lg") %>
             </div>
             <% end%>
         </div>
