pagination in articles and users

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,4 +2,13 @@
     <div class= "d-flex justify-content-center">
     <%= link_to 'Create new', new_article_path, class: "btn btn-success" %>
     </div>
+    <div class="flickr_pagination">
+         <%= will_paginate @articles, :container => false %>
+    </div>
     <%= render 'article' %>
+    <div class="flickr_pagination mb-4">
+        <%= will_paginate @articles, :container => false %>
+    </div>
+    
+
+    
