--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,7 @@
                 <div class="card-header">
                     <div class="fst-italic">
                         By <%= @article.user.username if @article.user %>
+                        <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
                     </div>
                 </div>
                 <div class="card-body">
