Admin feature added

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,14 @@
                             </h5>
                             <p class="card-text"><%= pluralize(user.articles.count, "Article") %></p>
                             <a href="#" ><%= link_to "View Profile", user, class: "btn btn-outline-success" %></a>
-                            <a href="#" ><%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info"%></a>
+                            <% if logged_in? %>
+                                <% if user == current_user %>
+                                    <a href="#" ><%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info"%></a>
+                                <% end %>
+                                <% if current_user.admin? %>
+                                    <%= link_to "Delete user", user_path(user), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure to delete account and all associated articles...."} %>
+                                <% end %>
+                            <% end %>
                         </div>
                         <div class="card-footer text-muted">
                             <small>Joined <%= time_ago_in_words(user.created_at) %> ago %> ago</small>
