--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,12 +8,17 @@
                              by <%= link_to article.user.username, user_path(article.user) %>
                         <% end %>
                         </div>
+                        
                         <div class="card-body">
                             <h5 class="card-title"><%= link_to article.title ,article_path(article), class: "text-success" %></h5>
                             <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                             <a href="#" ><%= link_to "View", article_path(article) ,class: "btn btn-outline-success" %></a>
-                            <a href="#" ><%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info"%></a>
-                            <a href="#" ><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure"} ,class: "btn btn-outline-danger" %></a>
+                           
+                            <% if logged_in? && (article.user == current_user || current_user.admin?) %>
+                                <a href="#" ><%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info"%></a>
+                                <a href="#" ><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure"} ,class: "btn btn-outline-danger" %></a>
+                            <% end %>    
+                        
                         </div>
                         <div class="card-footer text-muted">
                             <small>Created <%= time_ago_in_words(article.created_at) %> ago,
