--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,9 +11,11 @@
                 </div>
                 <div class="card-body">
                     <div class="card-text text-start"><%= simple_format(@article.description) %></div>
-                    <a href="#" ><%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-success" %></a>
-                    <a href="#" ><%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %></a>
-                </div>
+                    <% if logged_in? && (@article.user == current_user || current_user.admin)  %>
+                        <a href="#" ><%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-success" %></a>
+                        <a href="#" ><%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %></a>
+                    <% end %>
+                    </div>
                 <div class="card-footer text-muted">
                     <small>Created <%= time_ago_in_words(@article.created_at) %> ago, Edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
                 </div>
