--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,20 +11,50 @@
                       <%= link_to "Bloggers", users_path, class: "nav-link" %>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Articles
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><%= link_to "Create new article", new_article_path, class: "dropdown-item" %>
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Articles
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                             <% if logged_in? %>
+                              <li><%= link_to "Create new article", new_article_path, class: "dropdown-item" %>
+                                </li>
+                            <% end %>
+                                <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
+                                <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                           </ul>
                         </li>
-                        <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
+                    
+                    <% if logged_in? %>
+
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <%= "(Admin)" if current_user.admin %> Profile [<%= current_user.username %>s]
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            
+                              <li><%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
+                                </li>
+                    
+                                <li><%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %></li>
+
+                                <li><%= link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"} %></li>
+                                
+                           </ul>
+                        </li>
+
+                    <li class="nav-item">
+                      <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %>
+                    </li>
+                    
+                    <% else %>
+                    <li class="nav-item">
+                      <%= link_to "Log in", login_path, class: "nav-link" %>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                      <%= link_to "Sign up", signup_path, class: "nav-link" %>
                     </li>
+                    <% end %>
                   </ul>
                   <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
