--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,6 +16,13 @@
                 </div>
 
             </div>
+            <div class="mb-3 row"> 
+                <%= f.label :category, class: "col-2 col-form-label text-light" %><br/>
+                <div class="col-10">
+                <%= f.collection_select :category_ids, Category.order(:name), :id, :name, { prompt: "Make sure selection from list below (can be empty)"}, {multiple: true, size: 3, class: "form-select  shadow rounded"} %>
+                </div>
+
+            </div>
             <div class="mb-3 d-flex justify-content-center"> 
                 <%= f.submit class: "btn btn-outline-light lg"%>
             </div>
