--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,9 @@
                         By <%= @article.user.username if @article.user %>
                         <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
                     </div>
+                    <% if @article.categories.any? %>
+                       <div class="mt-2"> <%= render @article.categories %></div>
+                    <% end %>
                 </div>
                 <div class="card-body">
                     <div class="card-text text-start"><%= simple_format(@article.description) %></div>
