users issue solved

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,7 +28,7 @@
                             <% end %>
                         </div>
                         <div class="card-footer text-muted">
-                            <small>Joined <%= time_ago_in_words(user.created_at) %> ago %> ago</small>
+                            <small>Joined <%= time_ago_in_words(user.created_at) ago %> ago</small>
                         </div>
                     </div>
                 </div>
